# arch-layer-prod-mongo-fast

./: .env.example  .gitignore  QUICKSTART.md  README.md  docker-compose.yml  grafana-datasources.yml  promtail-config.yml  pyproject.toml  seed_data.py
.github/workflows/: ci.yml  protect-template.yml
src/arch_layer_prod_mongo_fast/: __init__.py  client.py  config.py  exceptions.py  logging_config.py  main.py
src/arch_layer_prod_mongo_fast/api/: __init__.py  dependencies.py  routes.py
src/arch_layer_prod_mongo_fast/middleware/: __init__.py  logging_middleware.py
src/arch_layer_prod_mongo_fast/models/: __init__.py  product.py
src/arch_layer_prod_mongo_fast/repositories/: __init__.py  elastic_repository.py  mongo_repository.py  redis_repository.py
src/arch_layer_prod_mongo_fast/services/: __init__.py  product_service.py
src/arch_layer_prod_mongo_fast/utils/: __init__.py  logging_decorators.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_main.py  test_models.py
tests/integration/: __init__.py  conftest.py
tests/integration/test_api/: test_dependencies.py
tests/integration/test_repositories/: __init__.py  test_elastic_repository.py  test_mongo_repository.py  test_redis_repository.py
tests/test_api/: test_dependencies.py  test_routes.py
tests/test_repositories/: test_elastic_repository.py  test_mongo_repository.py  test_redis_repository.py
tests/test_services/: test_product_service.py
tests/unit/: conftest.py  test_client.py  test_config.py  test_logging.py  test_middleware.py  test_models.py
tests/unit/test_api/: test_routes.py
tests/unit/test_repositories/: test_elastic_repository.py  test_redis_repository.py
tests/unit/test_services/: test_product_service.py
