[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arch-layer-prod-mongo-fast"
version = "0.1.0"
description = "Production layered architecture with MongoDB, Redis, Elasticsearch"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Your Name", email = "your@email.com" }]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "motor>=3.5.0",
    "beanie>=1.26.0",
    "redis>=5.0.0",
    "elasticsearch[async]>=8.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "bandit>=1.7.0",
    "pre-commit>=3.8.0",
    "testcontainers[mongodb,redis]>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arch_layer_prod_mongo_fast"]

# ==================================================
# RUFF
# ==================================================
[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH",
    "ERA", "PL", "RUF", "PERF", "S", "ANN", "D", "N", "ASYNC", "A",
    "DTZ", "T10", "EM", "LOG", "G", "PIE", "T20", "Q", "RSE", "RET",
    "SLF", "SLOT", "TID", "TRY", "FLY",
]
ignore = ["D100", "D104", "D107", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "D", "PLR2004", "EM", "TRY003", "PLR0913", "PLC0415", "ARG002", "TC001"]
"**/__init__.py" = ["F401"]
# FastAPI routes need runtime imports for dependency_overrides to work
"**/routes.py" = ["TC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["arch_layer_prod_mongo_fast"]

# ==================================================
# MYPY
# ==================================================
[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ==================================================
# PYTEST
# ==================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers",
    "ignore::DeprecationWarning:lazy_model",
    "ignore:Accessing the 'model_fields':pydantic.PydanticDeprecatedSince211",
]
markers = [
    "unit: Unit tests (fast, use mocks)",
    "integration: Integration tests (slow, use testcontainers)",
]

# ==================================================
# COVERAGE
# ==================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["**/tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
